2009-11-19  Sam Steingold  <sds@gnu.org>

	RENAME-FILE accepts :IF-EXISTS (unless *ANSI* is T)
	* pathname.d (move_file) [WIN32_NATIVE]: atomic rename when
	available using MoveFileEx (available since windows 2000)
	(rename_existing_file): use it
	(rename_existing_path): add, use it in rename_file & RENAME-DIRECTORY
	(rename_file): accept if_exists
	(RENAME-FILE): accept :IF-EXISTS unless *ANSI* is T
	* subr.d, subrkw.d (rename_file): modify the declaration
	* modules/syscalls/calls.c (copy_one_file):
	pass :IF-EXISTS to RENAME-FILE

2009-11-19  Sam Steingold  <sds@gnu.org>

	* eval.d (funcall_iclosure): use error_too_few_args
	(interpret_bytecode_): use error_too_many_args
	* control.d (MULTIPLE-VALUE-CALL, APPLYHOOK): ditto

2009-11-19  Sam Steingold  <sds@gnu.org>

	* check-lispfun.lisp (check-lisp-defs): check for LISPFUNs with
	keywords not mentioned in subrkw.d

2009-11-15  Sam Steingold  <sds@gnu.org>

	* makemake.in: dynamic modules do not work with C++ because of
	symbol mangling, so with_dynamic_modules defaults to !CC_CPLUSPLUS;
	and fail if --with-dynamic-modules is specified with a C++ compiler

2009-11-13  Vladimir Tzankov  <vtzankov@gmail.com>

	* package.d (intern): perform additional symbol lookup after CERROR
	when package is locked - the symbol may have been interned while
	processing handlers (or by CERROR itself)

2009-11-12  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (unused): do not export to clisp.h, it is never used
	in any module and causes trouble on some platforms
	* modules/berkeley-db/bdb.c, modules/dirkey/dirkey.c:
	* modules/gtk2/gtk.lisp, modules/syscalls/calls.c:
	no need to "#under unused" anymore
	* modules/clx/new-clx/clx.f, modules/rawsock/rawsock.c:
	define unused which is actually used here a few times,
	but only _after_ all #include's

2009-11-11  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (unused): undef unused before all the
	system includes and do not restore it because it is not used here
